Add main model training modules, preprocessing, and utilities. Tested with existing R dataset, continue to setup preprocessing for gathering data via Python instead of R.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,8 @@ include README.md
 include LICENSE
 include cmpd_accidents/resources/soap_descriptors/cmpd_soap_descriptor.xml
 include cmpd_accidents/resources/db/mysql_create_accidents.sql
+include traffic_analyzer/resources/census_income.csv
+include traffic_analyzer/resources/census_population.csv
+include traffic_analyzer/resources/roads.csv
+include traffic_analyzer/resources/signals.csv
+include traffic_analyzer/resources/traffic_volumes.csv
