--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,26 +2,17 @@ version: '3'
 
 services:
   web:
-    restart: always
     build: ./traffic_analyzer_api
     expose:
       - "8000"
-    volumes:
-      - web-data:/usr/src/app/static
-    env_file: 
+    env_file:
       - .env
-    command: /usr/local/bin/gunicorn -w 2 -b :8000 app:app
+    command: /usr/local/bin/gunicorn -w 3 -b :8000 app:app
 
   nginx:
     restart: always
     build: ./nginx
     ports:
-      - "80:80"
-    volumes:
-      - .:/www/static
-      - web-data:/usr/src/app/static
-    links:
-      - web:web
-
-volumes:
-  web-data:
+      - "3000:80"
+    depends_on:
+      - web
