Minor tweaks, add TODOs for better analytics with imputation techniques

--- a/.gitignore
+++ b/.gitignore
@@ -109,8 +109,10 @@ cover/
 .vscode
 test.csv
 predicted.csv
-trainset*
-predictions*
+trainset.csv
+predictions.csv
+dbscan.csv
+trainset_test.csv
 
 # Google Cloud
-google*.json
+*credentials.json
